New UI elements (text input, checkbox, gauge, slider and combobox) now also for Android